# CurRate

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GITHUB_SETUP.md  GITHUB_SETUP_RECOMMENDATIONS.md  README.md  RELEASE_NOTES_v1.0.0.md  RELEASE_v1.0.0_SUMMARY.md  check_imports.py  check_quality.py  pyproject.toml  pytest.ini  quick_test.py  run.py  run_tests.py  test_xml_api_poc.py
.cursor/commands/: build.md
.cursor/rules/isolation_rules/: main.mdc
.cursor/rules/isolation_rules/Core/: optimization-integration.mdc
.cursor/rules/isolation_rules/Level3/: workflow-level3.mdc
.github/workflows/: ci.yml
src/currate/: __init__.py  cache.py  cbr_parser.py  currency_converter.py  gui.py  main.py
tests/: __init__.py  conftest.py  test_cache.py  test_cache_edge_cases.py  test_cache_extended.py  test_cache_thread_safety.py  test_cbr_parser.py  test_cbr_parser_edge_cases.py  test_currency_converter.py  test_currency_converter_edge_cases.py  test_currency_converter_extended.py  test_date_validation.py  test_error_messages.py  test_format_result_critical.py  test_gui_basic.py  test_main.py
