[project]
name = "currate"
version = "0.1.0"
description = "Currency rates project"
authors = [
    {name = "biv"}
]
readme = "README.md"
requires-python = "^3.14"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "tkcalendar (>=1.6.1,<2.0.0)",
    "pyperclip (>=1.11.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
